--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,6 @@ proyecto2:
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
