registros: logear salir registrarse

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,6 +32,7 @@ framework:
     fragments:       ~
     http_method_override: true
     assets: ~
+    translator: ~
 
 # Twig Configuration
 twig:
@@ -68,3 +69,10 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: Proyecto2Bundle\Entity\Cliente
+    registration:
+        form:
+            type: Proyecto2Bundle\Form\ClienteType
